# nodespace-core-logic

./: .gitignore  BENCHMARK_README.md  CLAUDE.md  Cargo.toml  DESKTOP_INTEGRATION.md  LINT_IMPROVEMENTS.md  README.md  bundled_models  universal_nodes.csv  universal_nodes_no_embeddings.csv
.fastembed_cache/models--Xenova--bge-small-en-v1.5/refs/: main
benches/: date_lookup_performance.rs
docs/: database-management-strategy.md  lancedb-architecture.md
examples/: analyze_column_usage.rs  analyze_data_types_and_storage.rs  analyze_id_strategies.rs  analyze_node_hierarchy.rs  analyze_root_nodes.rs  batch_embedding_demo.rs  check_all_nodes.rs  check_date_nodes.rs  check_embeddings.rs  check_marketing_data_tables.rs  check_node_embeddings.rs  check_table_counts.rs  compare_table_architectures.rs  count_all_nodes.rs  create_comprehensive_marketing_data.rs  create_correct_structure.rs  create_hierarchical_marketing_data.rs  create_marketing_sample_data.rs  create_sample_data.rs  create_structured_marketing_data.rs  debug_data_storage_issue.rs  debug_database_relationships.rs  debug_date_filter.rs  debug_date_matching.rs  debug_embeddings.rs  debug_exact_query.rs  debug_get_nodes_for_date.rs  debug_hierarchical_relationships.rs  debug_raw_relationships.rs  debug_relationship_table.rs  debug_search_issue.rs  debug_sibling_order.rs  debug_single_node_relationships.rs  demo_integration.rs  desktop_app_integration.rs  desktop_app_service_container.rs  direct_database_query.rs  enhanced_date_api_demo.rs  examine_desktop_database.rs  export_to_csv.rs  (+70 more)
src/: desktop_integration.rs  lib.rs  tests.rs
tests/: integration_tests.rs  integration_tests.rs.disabled  ns49_integration_validation.rs
