[package]
name = "nodespace-core-logic"
version = "0.1.0"
edition = "2021"
description = "Business logic and service orchestration for NodeSpace"

[dependencies]
nodespace-core-types = { path = "../nodespace-core-types" }
nodespace-data-store = { path = "../nodespace-data-store" }
nodespace-nlp-engine = { path = "../nodespace-nlp-engine" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Features temporarily disabled until dependency issues are resolved
# [features]
# default = ["data-store", "nlp-engine"]
# data-store = ["dep:nodespace-data-store"]
# nlp-engine = ["dep:nodespace-nlp-engine"]

[dev-dependencies]
lancedb = "0.20.0"
arrow-array = "55"
arrow-schema = "55"
futures = "0.3"
uuid = { version = "1.6", features = ["v4"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-test = "0.4"

[[bench]]
name = "date_lookup_performance"
harness = false

