[package]
name = "nodespace-core-logic"
version = "0.1.0"
edition = "2021"
description = "Business logic and service orchestration for NodeSpace"

[dependencies]
nodespace-core-types = { path = "../nodespace-core-types" }
nodespace-data-store = { path = "../nodespace-data-store" }
nodespace-nlp-engine = { path = "../nodespace-nlp-engine", features = ["real-ml", "ollama"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
lancedb = "0.20.0"
arrow-array = "55"
arrow-schema = "55"
futures = "0.3"
uuid = { version = "1.6", features = ["v4"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-test = "0.4"

[[example]]
name = "populate_from_json"
path = "examples/populate_from_json.rs"

